# scribe

./: .dockerignore  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile  release.sh  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: quality.yml  release.yml  test-release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
crates/scribe-cli/: Cargo.toml
crates/scribe-cli/src/: main.rs
crates/scribe-client/: Cargo.toml
crates/scribe-client/src/: ai_indicator.rs  clipboard_cleanup.rs  close_dialog.rs  command_palette.rs  config.rs  context_menu.rs  divider.rs  input.rs  ipc_client.rs  layout.rs  main.rs  mouse_reporting.rs  mouse_state.rs  notifications.rs  pane.rs  preedit.rs  prompt_bar.rs  restore_replay.rs  restore_state.rs  scrollbar.rs  search_overlay.rs  selection.rs  smart_selection.rs  splash.rs  split_scroll.rs  status_bar.rs  sys_stats.rs  tab_bar.rs  tooltip.rs  update_dialog.rs  url_detect.rs  window_state.rs  workspace_layout.rs  workspace_notes.rs  workspace_notes_modal.rs  workspace_notes_preview.rs  x11_focus.rs
crates/scribe-client/src/notification_dispatcher/: linux.rs  macos.rs  mod.rs
crates/scribe-client/src/shaders/: splash.wgsl
crates/scribe-common/: Cargo.toml
crates/scribe-common/src/: ai_state.rs  app.rs  config.rs  driver.rs  error.rs  framing.rs  hook.rs  ids.rs  lib.rs  profiles.rs  protocol.rs  screen.rs  screen_replay.rs  settings_window.rs  shell.rs  socket.rs  theme.rs  theme_community_presets.rs
crates/scribe-driver/: Cargo.toml
crates/scribe-driver/prompts/: task_prompt.md
crates/scribe-driver/src/: colors.rs  handler.rs  lib.rs  main.rs  messages.rs  server_client.rs  singleton.rs  state.rs
crates/scribe-driver/src/assets/: driver.css  driver.html  driver.js
crates/scribe-driver/src/repository/: mod.rs  sqlite.rs
crates/scribe-hook-helper/: Cargo.toml
crates/scribe-hook-helper/src/: main.rs
crates/scribe-pty/: Cargo.toml
crates/scribe-pty/src/: async_fd.rs  claude_picker_filter.rs  codex_hook_log_filter.rs  ed3_filter.rs  event_listener.rs  lf_crlf_filter.rs  lib.rs  metadata.rs  osc_interceptor.rs  sync_update_filter.rs
crates/scribe-renderer/: Cargo.toml
crates/scribe-renderer/src/: atlas.rs  box_drawing.rs  chrome.rs  lib.rs  palette.rs  pipeline.rs  types.rs
crates/scribe-renderer/src/shaders/: terminal.wgsl
crates/scribe-server/: Cargo.toml
crates/scribe-server/src/: attach_flow.rs  config.rs  driver_tasks.rs  handoff.rs  handoff_tests.rs  hook_ingress.rs  ipc_server.rs  lib.rs  macos_proc.rs  main.rs  releases.rs  session_manager.rs  shell_integration.rs  stop_classifier.rs  updater.rs  workspace_manager.rs  workspace_notes.rs
crates/scribe-server/src/env_store/: delta.rs  envelope.rs  keystore.rs  mod.rs  store.rs
crates/scribe-server/tests/: replay_roundtrip.rs
crates/scribe-settings/: Cargo.toml
crates/scribe-settings/src/: apply.rs  lib.rs  main.rs  server_action.rs  singleton.rs  state.rs
crates/scribe-settings/src/assets/: settings.css  settings.html  settings.js
crates/scribe-test/: Cargo.toml
crates/scribe-test/src/: assert.rs  capture.rs  cmd_socket.rs  daemon.rs  input.rs  ipc.rs  main.rs  render.rs  server.rs  session.rs  wait.rs
docker/: Dockerfile.func  Dockerfile.visual  entrypoint-func.sh  entrypoint-visual.sh
docs/superpowers/plans/: 2026-03-22-e2e-testing-containers.md  2026-03-23-implement-missing-settings.md  2026-04-08-prompt-bar-redesign.md  2026-04-13-explicit-ai-tab-shortcuts.md  2026-04-13-status-bar-update-notification.md  2026-04-17-scribe-handoff-redesign.md
docs/superpowers/specs/: 2026-03-23-implement-missing-settings-design.md  2026-04-08-prompt-bar-redesign-design.md  2026-04-13-explicit-ai-tab-shortcuts-design.md  2026-04-13-status-bar-update-notification-design.md  2026-04-17-scribe-handoff-redesign-design.md
lat.md/: architecture.md  client.md  common.md  lat.md  protocol.md  pty.md  rendering.md  server.md  settings.md  test.md
lat.md/.cache/: lat_init.json
specs/001-releases-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-releases-page/checklists/: requirements.md
specs/001-releases-page/contracts/: releases-protocol.md
specs/002-smart-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-smart-selection/checklists/: requirements.md
specs/002-smart-selection/contracts/: config-smart-selection.md  settings-ui-smart-selection.md
specs/003-ai-hook-channel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-hook-channel/checklists/: requirements.md
specs/003-ai-hook-channel/contracts/: env-vars.md  helper-cli.md  wire-protocol.md
specs/004-workspace-notes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-workspace-notes/checklists/: requirements.md
specs/004-workspace-notes/contracts/: workspace-notes-protocol.md  workspace-notes-state.md  workspace-notes-ui.md
specs/005-keyboard-command-awareness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-keyboard-command-awareness/checklists/: requirements.md
specs/006-persist-terminal-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-add-note-from-hover/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-ime-composition/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/e2e/: smoke.sh  visual-reconnect.sh
tests/install/: auggie-hooks-regressions.sh  claude-statusline-regressions.sh  codex-context-regressions.sh  postinst-regressions.sh
tools/: check-no-new-lint-suppressions.sh  lint-suppressions-allowlist.txt
(+23 files in other folders)
