[workspace]
members = ["crates/*"]
exclude = ["third_party/*"]
resolver = "3"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
description = "Scribe terminal emulator"
repository = "https://github.com/scribe-terminal/scribe"
readme = "README.md"
keywords = ["terminal", "pty", "emulator"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# Async
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "io-std",
  "process",
  "sync",
  "net",
  "signal",
  "fs",
  "time",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
zstd = { version = "0.13", default-features = false }

# Terminal
vte = { version = "0.15", features = ["ansi"] }
alacritty_terminal = { version = "0.26.0-rc1", default-features = false }
toml = "0.8"
dirs = "6"
notify = "8"

# CLI
clap = { version = "4", features = ["derive"] }
regex = "1"

# Utilities
uuid = { version = "1.22", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "registry",
] }
bytes = "1"

# PTY / OS bindings
nix = { version = "0.31", features = [
  "term",
  "process",
  "signal",
  "fs",
  "hostname",
  "user",
  "socket",
  "uio",
] }
rustix = { version = "1.1", features = ["net"] }
libc = "0.2"
unix-ancillary = "0.1"
x11rb = { version = "0.13", default-features = false }
raw-window-handle = "0.6"

# GPU / windowing
wgpu = { version = "29.0", default-features = false, features = [
  "vulkan",
  "gles",
  "metal",
  "wgsl",
  "std",
] }
winit = "0.30"
pollster = "0.4"
cosmic-text = { version = "0.17", features = [
  "shape-run-cache",
  "monospace_fallback",
] }
bytemuck = { version = "1", features = ["derive"] }
png = "0.17"

# Webview / settings
wry = "0.55"
rust-embed = "8"
tao = "0.33"
signal-hook = "0.3"
sysinfo = "0.35"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
semver = "1.0"
minisign-verify = "0.2"

# Workspace crates
scribe-common = { path = "crates/scribe-common" }
scribe-pty = { path = "crates/scribe-pty" }
scribe-renderer = { path = "crates/scribe-renderer" }
scribe-settings = { path = "crates/scribe-settings" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Groups (priority -1 so individual overrides take effect)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Restriction lints (cherry-picked)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
string_add = "deny"
panic_in_result_fn = "deny"
error_impl_error = "deny"
shadow_unrelated = "deny"
rc_mutex = "deny"
clone_on_ref_ptr = "deny"
let_underscore_must_use = "deny"
# Full allow/expect bans are enforced on new diffs by
# tools/check-no-new-lint-suppressions.sh until legacy narrow allows are retired.
allow_attributes_without_reason = "deny"
await_holding_lock = "deny"

# Nursery (cherry-picked stable)
cognitive_complexity = "deny"
useless_let_if_seq = "deny"
redundant_pub_crate = "deny"
option_if_let_else = "deny"

# Pedantic overrides (genuinely noisy)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Cargo overrides — transitive dep version conflicts are unavoidable
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Local fork of unix-ancillary 0.1.0 — upstream 0.1.0 fails to compile on Apple
# targets because `set_cloexec` references `io::Result` without importing
# `std::io`. Drop this patch once a fixed release ships on crates.io.
[patch.crates-io]
unix-ancillary = { path = "third_party/unix-ancillary" }
