[package]
name = "scribe-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
scribe-common.workspace = true
scribe-pty.workspace = true
scribe-renderer.workspace = true
alacritty_terminal.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vte.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
png.workspace = true
notify.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
libc.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", default-features = false, features = [
  "wayland-data-control",
] }
x11rb.workspace = true
raw-window-handle.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = { version = "3", default-features = false }
