[package]
name = "scribe-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
nix.workspace = true
