[package]
name = "scribe-hook-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Scribe AI tool hook event emitter binary"

[[bin]]
name = "scribe-hook-helper"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
scribe-common = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "macros",
  "io-util",
  "net",
  "time",
] }
clap.workspace = true
serde_json = { workspace = true }
