[package]
name = "scribe-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wgpu.workspace = true
cosmic-text.workspace = true
fontdb = "0.23.0"
bytemuck.workspace = true
alacritty_terminal.workspace = true
tracing.workspace = true
scribe-common.workspace = true
