[package]
name = "scribe-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.deb]
name = "scribe"
maintainer = "Scribe Team <team@scribe-terminal.dev>"
copyright = "2026 Scribe Team"
depends = "libgtk-4-1 (>= 4.12), libvulkan1"
section = "utils"
priority = "optional"
extended-description = """GPU-accelerated terminal emulator with a PTY server architecture, \
path-aware workspaces, and first-class AI process awareness. \
Supports zero-downtime server upgrades via fd handoff."""
assets = [
    ["target/release/scribe-server", "usr/bin/", "755"],
    ["target/release/scribe-client", "usr/bin/", "755"],
    ["../../dist/scribe-server.service", "usr/lib/systemd/user/", "644"],
    ["../../dist/scribe.desktop", "usr/share/applications/", "644"],
    ["../../dist/scribe-icon-48.png", "usr/share/icons/hicolor/48x48/apps/scribe.png", "644"],
    ["../../dist/scribe-icon-128.png", "usr/share/icons/hicolor/128x128/apps/scribe.png", "644"],
    ["../../dist/scribe-icon-256.png", "usr/share/icons/hicolor/256x256/apps/scribe.png", "644"],
    ["../../dist/scribe-icon-512.png", "usr/share/icons/hicolor/512x512/apps/scribe.png", "644"],
]
maintainer-scripts = "../../dist/debian/"

[package.metadata.cargo-machete]
ignored = [
  "rmp-serde",
  "serde",
  "thiserror",
  "uuid",
]

[dependencies]
scribe-common.workspace = true
alacritty_terminal.workspace = true
toml.workspace = true
dirs.workspace = true
scribe-pty.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vte.workspace = true
libc.workspace = true
nix.workspace = true
