[package]
name = "scribe-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[package.metadata.deb]
name = "scribe"
maintainer = "Scribe Team <team@scribe-terminal.dev>"
copyright = "2026 Scribe Team"
depends = "libgtk-4-1 (>= 4.12), libvulkan1"
section = "utils"
priority = "optional"
extended-description = """GPU-accelerated terminal emulator with a PTY server architecture, \
path-aware workspaces, and first-class AI process awareness. \
Supports zero-downtime server upgrades via fd handoff."""
assets = [
  [
    "target/release/scribe-server",
    "usr/bin/",
    "755",
  ],
  [
    "target/release/scribe-client",
    "usr/bin/",
    "755",
  ],
  [
    "target/release/scribe-settings",
    "usr/bin/",
    "755",
  ],
  [
    "../../dist/scribe-server.service",
    "usr/lib/systemd/user/",
    "644",
  ],
  [
    "../../dist/scribe.desktop",
    "usr/share/applications/",
    "644",
  ],
  [
    "../../dist/scribe-icon-48.png",
    "usr/share/icons/hicolor/48x48/apps/scribe.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-128.png",
    "usr/share/icons/hicolor/128x128/apps/scribe.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-256.png",
    "usr/share/icons/hicolor/256x256/apps/scribe.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-512.png",
    "usr/share/icons/hicolor/512x512/apps/scribe.png",
    "644",
  ],
  [
    "../../dist/setup-claude-hooks.sh",
    "usr/share/scribe/setup-claude-hooks.sh",
    "755",
  ],
  [
    "../../dist/detect-claude-question.sh",
    "usr/share/scribe/detect-claude-question.sh",
    "755",
  ],
  [
    "../../dist/setup-codex-hooks.sh",
    "usr/share/scribe/setup-codex-hooks.sh",
    "755",
  ],
  [
    "../../dist/detect-codex-question.sh",
    "usr/share/scribe/detect-codex-question.sh",
    "755",
  ],
  [
    "../../dist/codex-task-label.sh",
    "usr/share/scribe/codex-task-label.sh",
    "755",
  ],
  [
    "../../dist/shell-integration/bash/scribe.bash",
    "usr/share/scribe/shell-integration/bash/",
    "644",
  ],
  [
    "../../dist/shell-integration/zsh/.zshenv",
    "usr/share/scribe/shell-integration/zsh/",
    "644",
  ],
  [
    "../../dist/shell-integration/zsh/scribe.zsh",
    "usr/share/scribe/shell-integration/zsh/",
    "644",
  ],
  [
    "../../dist/shell-integration/fish/vendor_conf.d/scribe.fish",
    "usr/share/scribe/shell-integration/fish/vendor_conf.d/",
    "644",
  ],
]
maintainer-scripts = "../../dist/debian/"

[package.metadata.deb.variants.dev]
name = "scribe-dev"
assets = [
  [
    "target/release/scribe-server",
    "usr/bin/scribe-dev-server",
    "755",
  ],
  [
    "target/release/scribe-client",
    "usr/bin/scribe-dev",
    "755",
  ],
  [
    "target/release/scribe-settings",
    "usr/bin/scribe-dev-settings",
    "755",
  ],
  [
    "../../dist/scribe-dev-server.service",
    "usr/lib/systemd/user/scribe-dev-server.service",
    "644",
  ],
  [
    "../../dist/scribe-dev.desktop",
    "usr/share/applications/scribe-dev.desktop",
    "644",
  ],
  [
    "../../dist/scribe-icon-48.png",
    "usr/share/icons/hicolor/48x48/apps/scribe-dev.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-128.png",
    "usr/share/icons/hicolor/128x128/apps/scribe-dev.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-256.png",
    "usr/share/icons/hicolor/256x256/apps/scribe-dev.png",
    "644",
  ],
  [
    "../../dist/scribe-icon-512.png",
    "usr/share/icons/hicolor/512x512/apps/scribe-dev.png",
    "644",
  ],
  [
    "../../dist/setup-claude-hooks.sh",
    "usr/share/scribe-dev/setup-claude-hooks.sh",
    "755",
  ],
  [
    "../../dist/detect-claude-question.sh",
    "usr/share/scribe-dev/detect-claude-question.sh",
    "755",
  ],
  [
    "../../dist/setup-codex-hooks.sh",
    "usr/share/scribe-dev/setup-codex-hooks.sh",
    "755",
  ],
  [
    "../../dist/detect-codex-question.sh",
    "usr/share/scribe-dev/detect-codex-question.sh",
    "755",
  ],
  [
    "../../dist/codex-task-label.sh",
    "usr/share/scribe-dev/codex-task-label.sh",
    "755",
  ],
  [
    "../../dist/shell-integration/bash/scribe.bash",
    "usr/share/scribe-dev/shell-integration/bash/",
    "644",
  ],
  [
    "../../dist/shell-integration/zsh/.zshenv",
    "usr/share/scribe-dev/shell-integration/zsh/",
    "644",
  ],
  [
    "../../dist/shell-integration/zsh/scribe.zsh",
    "usr/share/scribe-dev/shell-integration/zsh/",
    "644",
  ],
  [
    "../../dist/shell-integration/fish/vendor_conf.d/scribe.fish",
    "usr/share/scribe-dev/shell-integration/fish/vendor_conf.d/",
    "644",
  ],
]

[package.metadata.cargo-machete]
ignored = [
  "rmp-serde",
  "serde",
  "thiserror",
  "uuid",
  "reqwest",
  "semver",
  "serde_json",
  "minisign-verify",
]

[dependencies]
scribe-common.workspace = true
alacritty_terminal.workspace = true
dirs.workspace = true
scribe-pty.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vte.workspace = true
libc.workspace = true
nix.workspace = true
reqwest.workspace = true
futures-util = "0.3"
semver.workspace = true
serde_json.workspace = true
minisign-verify.workspace = true
sha2 = "0.10"

[dev-dependencies]
# test-util: provides #[tokio::test] macro for async tests.
tokio = { workspace = true, features = ["test-util"] }
# nix::pty::openpty() is available via the existing "term" feature — no extra
# dev-dependency needed for nix.
