[package]
name = "scribe-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
scribe-common.workspace = true
wry.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
tracing.workspace = true
gtk.workspace = true
fontdb = "0.23"
