[package]
name = "scribe-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
scribe-common.workspace = true
wry.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
tracing.workspace = true
fontdb = "0.23"
toml.workspace = true
nix.workspace = true
libc.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tao.workspace = true
signal-hook.workspace = true

[[bin]]
name = "scribe-settings"
path = "src/main.rs"
